# CMock

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Gemfile  LICENSE.txt  README  README.md  Rakefile  cmock.gemspec  cmockConfig.cmake  gcc.yml  iar.yml  iar_v4.yml  iar_v5.yml  meson.build  mingw.yml  rakefile.rb  rakefile_helper.rb
.github/workflows/: main.yml
config/: environment.rb  production_environment.rb  test_environment.rb
docker/: README.md  attach.sh  run.sh  setup.sh
docker/Resources/: Dockerfile  fish-starship.fish  init.sh  logging.sh  starship.toml
docker/Resources/vim/: .vimrc  lsp.vim  mappings.vim  plugins.vim  ui.vim
docs/: CMock Summary.odt  CMock Summary.txt  CMockChangeLog.md  CMockKnownIssues.md  CMock_ArgumentValidation.md  CMock_Summary.md  license.txt
examples/: gcc.yml  iar_v4.yml  iar_v5.yml  rakefile.rb  rakefile_helper.rb
examples/make_example/: Makefile
examples/make_example/src/: foo.c  foo.h  main.c
examples/make_example/test/: test_foo.c  test_main.c
examples/src/: AdcConductor.c  AdcConductor.h  AdcHardwareConfigurator.c  AdcHardwareConfigurator.h  AdcModel.c  AdcModel.h  Executor.c  IntrinsicsWrapper.c  IntrinsicsWrapper.h  ModelConfig.h  TaskScheduler.h  TemperatureCalculator.c  TemperatureCalculator.h  TemperatureFilter.c  TimerConfigurator.c  TimerInterruptConfigurator.h  TimerInterruptHandler.c  TimerInterruptHandler.h  TimerModel.c  TimerModel.h  Types.h  UsartBaudRateRegisterCalculator.c  UsartConfigurator.c  UsartConfigurator.h  UsartHardware.h  UsartModel.h
examples/temp_sensor/: gcc.yml  iar_v4.yml  iar_v5.yml  project.yml  rakefile.rb  rakefile_helper.rb
examples/temp_sensor/src/: AT91SAM7X256.h  AdcConductor.c  AdcConductor.h  AdcHardware.c  AdcHardware.h  AdcHardwareConfigurator.c  AdcHardwareConfigurator.h  AdcModel.c  AdcModel.h  AdcTemperatureSensor.c  AdcTemperatureSensor.h  Executor.c  Executor.h  IntrinsicsWrapper.c  IntrinsicsWrapper.h  Main.c  Main.h  Model.c  Model.h  ModelConfig.h  TaskScheduler.c  TaskScheduler.h  TemperatureCalculator.c  TemperatureCalculator.h  TemperatureFilter.c  TemperatureFilter.h  TimerConductor.c  TimerConductor.h  TimerConfigurator.c  TimerConfigurator.h  TimerHardware.c  TimerHardware.h  TimerInterruptConfigurator.c  TimerInterruptConfigurator.h  TimerInterruptHandler.c  TimerInterruptHandler.h  TimerModel.c  TimerModel.h  Types.h  UsartBaudRateRegisterCalculator.c  (+13 more)
examples/temp_sensor/targets/: gcc.yml  iar_v4.yml  iar_v5.yml
examples/temp_sensor/test/: TestAdcConductor.c  TestAdcHardware.c  TestAdcHardwareConfigurator.c  TestAdcModel.c  TestAdcTemperatureSensor.c  TestExecutor.c  TestMain.c  TestModel.c  TestTaskScheduler.c  TestTemperatureCalculator.c  TestTemperatureFilter.c  TestTimerConductor.c  TestTimerConfigurator.c  (+11 more)
examples/test/: TestAdcConductor.c  TestAdcHardware.c  TestMain.c  TestTimerConductor.c  TestTimerInterruptConfigurator.c  TestUsartHardware.c  TestUsartTransmitBufferStatus.c
iar/: AT91SAM7X256.html  AT91SAM7X256.tcl  Cstartup.s79  Cstartup_SAM7.c  at91SAM7X256_FLASH.xcl  cmock_demo.dep  cmock_demo.ewd  cmock_demo.ewp  ioat91sam7x256.h
iar/iar_v4/: cmock_demo.dep  cmock_demo.ewp
iar/iar_v5/: cmock_demo.dep  cmock_demo.ewp
iar/settings/: cmock_demo.cspy.bat  cmock_demo.dbgdt  cmock_demo.dni  cmock_demo.wsdt
lib/: CLexer.rb  cmock.rb  cmock_config.rb  cmock_file_writer.rb  cmock_function_prototype_node_classes.rb  cmock_function_prototype_parser.rb  cmock_function_prototype_parser.treetop  cmock_generator.rb  cmock_generator_plugin_array.rb  cmock_generator_plugin_callback.rb  cmock_generator_plugin_cexception.rb  cmock_generator_plugin_do_not_expect.rb  cmock_generator_plugin_expect.rb  cmock_generator_plugin_expect_any_args.rb  cmock_generator_plugin_ignore.rb  cmock_generator_plugin_ignore_arg.rb  cmock_generator_plugin_ignore_stateless.rb  cmock_generator_plugin_original.rb  cmock_generator_plugin_return_thru_ptr.rb  cmock_generator_plugin_validate_ptr_address.rb  cmock_generator_utils.rb  cmock_header_parser.rb  cmock_new.rb  cmock_plugin_manager.rb  cmock_setup.rb  cmock_unityhelper_parser.rb  cmock_version.rb
release/: build.info  version.info
scripts/: create_makefile.rb  create_mock.rb  create_runner.rb  test_summary.rb
src/: cmock.c  cmock.h  cmock_internals.h  meson.build
targets/: clang_strict.yml  gcc.yml  gcc_32_with_64_support.yml  gcc_64.yml  gcc_tiny.yml  iar_arm_v4.yml  iar_arm_v5.yml
test/: Exception.h  gcc_64_valgrind.yml  project.yml  rakefile  rakefile_helper.rb  test_helper.rb
test/c/: TestCMockC.c  TestCMockC.yml  TestCMockCDynamic.c  TestCMockCDynamic.yml  TestCMockCDynamic_Runner.c  TestCMockC_Runner.c
test/spec/: cmock_file_writer_spec.rb  cmock_generator_plugin_array_spec.rb  spec_helper.rb
test/system/: systest_generator.rb
test/targets/: clang.yml  clang_strict.yml  gcc.yml  gcc_32.yml  gcc_64.yml  gcc_tiny.yml  iar_arm.yml  iar_arm_v4.yml  iar_arm_v5.yml  tiny.yml
test/unit/: cmock_config_test.rb  cmock_config_test.yml  cmock_file_writer_test.rb  cmock_function_prototype_parser_test.rb  cmock_generator_main_test.rb  cmock_generator_no_error_stubs_plugin_array_test.rb  cmock_generator_no_error_stubs_plugin_expect_any_args_test.rb  cmock_generator_no_error_stubs_plugin_expect_test.rb  cmock_generator_no_error_stubs_plugin_ignore_stateless_test.rb  cmock_generator_no_error_stubs_plugin_ignore_test.rb  cmock_generator_plugin_array_test.rb  cmock_generator_plugin_callback_test.rb  cmock_generator_plugin_cexception_test.rb  cmock_generator_plugin_expect_a_test.rb  cmock_generator_plugin_expect_any_args_test.rb  cmock_generator_plugin_expect_b_test.rb  cmock_generator_plugin_expect_c_test.rb  cmock_generator_plugin_expect_test.rb  cmock_generator_plugin_ignore_arg_test.rb  cmock_generator_plugin_ignore_stateless_test.rb  cmock_generator_plugin_ignore_test.rb  cmock_generator_plugin_return_thru_ptr_test.rb  cmock_generator_test.rb  cmock_generator_utils_test.rb  cmock_header_parser_test.rb  cmock_plugin_manager_test.rb  cmock_spec.rb  cmock_unityhelper_parser_test.rb  thing_test.rb
(+146 files in other folders)
